# pyproject.toml
# ==============
#
# Copying
# -------
#
# Copyright (c) 2023 cloudguard authors and contributors.
#
# This file is part of the *cloudguard* project.
#
# *cloudguard* is a free software project. You can redistribute it and/or
# modify it following the terms of the MIT License.
#
# This software project is distributed *as is*, WITHOUT WARRANTY OF ANY KIND;
# including but not limited to the WARRANTIES OF MERCHANTABILITY, FITNESS FOR A
# PARTICULAR PURPOSE and NONINFRINGEMENT.
#
# You should have received a copy of the MIT License along with *cloudguard*.
# If not, see <http://opensource.org/licenses/MIT>.
#
[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"


[tool.isort]
known_third_party = []
atomic = true
combine_as_imports = true
combine_star = true
include_trailing_comma = true
length_sort = true
line_length = 80
lines_after_imports = 2
lines_between_types = 1
multi_line_output = 3
order_by_type = true
use_parentheses = true


[tool.poetry]
name = "cloudguard"
version = "0.1.0"
authors = ["See AUTHORS.rst <dev@jimmy.lt>"]
maintainers = [
    "Jimmy Thrasibule <dev@jimmy.lt>",
]
description = "A Python SDK for the CloudGuard REST API."
license = "MIT"
readme = "README.rst"
repository = "https://github.com/jimmy-lt/cloudguard-python"
keywords = ["cloudguard", "dome9", "sdk", "cloud", "cspm"]
# See https://pypi.python.org/pypi?%3Aaction=list_classifiers.
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Natural Language :: English",
    "Operating System :: POSIX",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]
include = [
    "AUTHORS.rst",
    "CONTRIBUTORS.rst",
]

[tool.poetry.dependencies]
python = "^3.8"
xdg = "^6.0.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.0.0"
black = "^23.1.0"
isort = "^5.12.0"
